force-app/main/default/objects/ZuoraOptions__c/ZuoraOptions__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configurable options for the Zuora customizations</description>
    <label>Zuora Options</label>
</CustomObject>