force-app/main/default/objects/ZuoraOptions__c/fields/Default_Initial_Term__c.field-meta.xml
<CustomField>
    <fullName>Default_Initial_Term__c</fullName>
    <defaultValue>60</defaultValue>
    <description>The default InitialTerm value for a new subscription or renewal quote</description>
    <inlineHelpText>The default InitialTerm value for a new subscription or renewal quote</inlineHelpText>
    <label>Default Initial Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>