force-app/main/default/objects/ZuoraOptions__c/fields/Send_To_Z_Billing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Z_Billing_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If unchecked, the send to z-billing button will be disabled (via NCRQuoteSubmit2Controller) - affects DI custom functionality only</description>
    <inlineHelpText>If unchecked, the send to z-billing button will be disabled (via NCRQuoteSubmit2Controller) - affects DI custom functionality only</inlineHelpText>
    <label>Send To Z-Billing Enabled?</label>
    <type>Checkbox</type>
</CustomField>