force-app/main/default/objects/ZuoraOptions__c/fields/Update_Quotes_on_Subscription_Sync__c.field-meta.xml
<CustomField>
    <fullName>Update_Quotes_on_Subscription_Sync__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, trigger the update of amendment quote Z ID&apos;s when a subscription is removed by Zuora z360 sync process.</description>
    <inlineHelpText>If checked, trigger the update of amendment quote Z ID&apos;s when a subscription is removed by Zuora z360 sync process.</inlineHelpText>
    <label>Update Quotes on Subscription Sync</label>
    <type>Checkbox</type>
</CustomField>